samples/_failures_safe/1761306814_dc89a9_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_2c073936.c: In function ‘main’:
./samples/SAFE/__tmp_2c073936.c:148:13: error: expected declaration or statement at end of input
  148 |             fprintf(stderr, "Error: Invalid operation selection\n");
      |             ^~~~~~~
./samples/SAFE/__tmp_2c073936.c:148:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_2c073936.c:148:13: error: expected declaration or statement at end of input
